[gd_scene load_steps=9 format=3 uid="uid://c436eub3jhyyo"]

[ext_resource type="Script" path="res://scripts/Actor.gd" id="1_dcc5h"]
[ext_resource type="Texture2D" uid="uid://c772babaql7d1" path="res://assets/Individual Animations/Handgun1.png" id="2_lcxxh"]
[ext_resource type="PackedScene" uid="uid://ph12rvvvssew" path="res://Scenes/Health.tscn" id="3_ln467"]
[ext_resource type="PackedScene" uid="uid://bbwclyqetqxiv" path="res://Scenes/Weapon.tscn" id="4_o5y18"]
[ext_resource type="Script" path="res://scripts/Actors/AI.gd" id="5_ohgp0"]
[ext_resource type="PackedScene" uid="uid://b0lskxloyu4wr" path="res://Scenes/Team.tscn" id="6_plovu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpoa8"]
size = Vector2(19, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_tq2m8"]
radius = 108.624

[node name="Ally" type="CharacterBody2D"]
script = ExtResource("1_dcc5h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lcxxh")
region_enabled = true
region_rect = Rect2(14.7206, 14.61, 31.81, 18.0726)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_dpoa8")

[node name="Health" parent="." instance=ExtResource("3_ln467")]

[node name="Weapon" parent="." instance=ExtResource("4_o5y18")]
position = Vector2(2.36173, -1.5909)

[node name="AI" type="Node2D" parent="."]
script = ExtResource("5_ohgp0")

[node name="DetectionZone" type="Area2D" parent="AI" groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/DetectionZone"]
shape = SubResource("CircleShape2D_tq2m8")

[node name="PatrolTimer" type="Timer" parent="AI"]
wait_time = 1.5
one_shot = true

[node name="Team" parent="." instance=ExtResource("6_plovu")]
team = 1

[connection signal="body_entered" from="AI/DetectionZone" to="AI" method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="AI/DetectionZone" to="AI" method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="AI/PatrolTimer" to="AI" method="_on_patrol_timer_timeout"]
